# NewtonFractalsRust

./: .gitignore  Cargo.toml  TODO  TODO.txt  help.md  input.csv  readme.md  sample_input.csv
src/: .main.rs.swp  main.rs
