[package]
name = "newton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
iced = { version = "0.13.1", features = ["advanced", "image","canvas"] }
image = {version = "0.24.9",features = ["rayon"]}
rand = "0.8.5"
rayon = {version = "1.9.0"}
regex = "1.10.4"

[profile.release]
debug = true
